# Scenery-Editor-X

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  App.xaml  App.xaml.cpp  App.xaml.h  CMakeLists.txt  CMakeSettings.json  Doxyfile  Editor-3d-viewport.vcxproj  Format Testing.sln  GenerateDoxygen.bat  LICENSE.txt  Log.1.txt  Log.3.txt  Log.txt  MainWindow.idl  MainWindow.xaml  MainWindow.xaml.cpp  MainWindow.xaml.h  Package.appxmanifest  QuickRegen.bat  README.md  RunTestsWithLogging.bat  RunTestsWithLogging.ps1  Scenery Editor X.sln  Scenery Editor X.vcxproj  Scenery Editor X.vcxproj.filters  SceneryEditorX.licenseheader  SetupProject.bat  X-Plane-12_renderdoc.cap  XP12_Vulkan_Log.txt  app.manifest  premake5.lua  readme.txt  renderdoc_settings.cap  settings.cfg  vcpkg.json  version.md
Source/EditorFramework/: CMakeLists.txt
Source/Launcher/: CMakeLists.txt  DirectoryManager.cpp  DirectoryManager.hpp  ElevatePerms.h  Launcher.rc  Logger.cpp  Logging.cpp  Logging.hpp  Main.cpp  RegCheck.h  RegInit.h  RegistryCheck.h  SplashHandler.h  Updater.cpp  Updater.h  launcher-resource.h  resource.h
Source/Launcher/core/: Logging.cpp  Main.cpp  SplashHandler.h  Updater.cpp  elevate_perms.h  splash_handler.h
Source/Launcher/registry/: ProgramReg.rgs  RegInit.h  edXLibReg.rgs  edXReg.rgs  reg_init.h
Source/SceneryEditorX/: CMakeLists.txt  Main.cpp  SceneryEditorX.rc  cpp.hint  resource.h  version.h  xpeditor_pch.h  xpeditorpch.cpp  xpeditorpch.h
Source/SceneryEditorX/Include/: DirectoryManager.hpp  Logging.hpp  Precompiled.h
Source/SceneryEditorX/Registry/: edXLibReg.rgs  edXReg.rgs
Source/SceneryEditorX/core/: Application.cpp  Application.hpp  AssetManager.hpp  Base.hpp  DirectoryManager.cpp  EdxAssert.h  EntryPoint.h  Main.cpp  Precompiled.h  VK_Window.cpp  VK_Window.hpp  Window.cpp  Window.hpp  app.cpp  keycodes.cpp  keycodes.h  layer.cpp  layer.h  node.cpp  node.h  version.h  window.h  xpeditor_pch.h
Source/SceneryEditorX/inputs/: KeyCodes.h
Source/SceneryEditorX/io/: FileDialog.cpp  FileDialog.h  LockFile.cpp
Source/SceneryEditorX/logging/: Logging.cpp  Logging.hpp  Profiler.hpp
Source/SceneryEditorX/options/: IniSettings.cpp
Source/SceneryEditorX/platform/: platform.h  platform_utils.cpp  platform_utils.h  system_detection.h
Source/SceneryEditorX/project/: project.cpp  project.h
Source/SceneryEditorX/renderer/: Camera.cpp  Camera.hpp  DeferredRenderer.cpp  DeferredRenderer.hpp  Renderer.cpp  RendererPBR.cpp  RendererPBR.h  Scene.cpp  VK_Buffer.h  VK_Debug.h  VK_Device.cpp  VK_Device.h  VK_FrameBuffer.hpp  VK_Pipeline.cpp  VK_Pipeline.hpp  VK_SwapChain.cpp  VK_SwapChain.h  VK_Tools.cpp  VK_Tools.h  VK_Wrapper.cpp  VK_glTF.h  graphics_defs.h  vk_buffers.h  vk_core.cpp  vk_core.h  vk_util.cpp  vk_util.h
Source/SceneryEditorX/scene/: Scene.h  asset_manager.cpp  asset_manager.h  camera.cpp  camera.h  component.cpp  component.h  scene.cpp  scene.h  transform.cpp
Source/SceneryEditorX/src/: xpeditorpch.h
Source/SceneryEditorX/ui/: ContentBrowser.cpp  LayerStack.cpp  MenuBar.cpp  Modals.cpp  SettingsPanel.cpp  Styles.cpp  UI.h  colors.h  gui_context.cpp  gui_context.h  ui.cpp  ui.h
Source/VulkanRenderer/: CMakeLists.txt  VulkanUIOverlay.h
Source/VulkanRenderer/Sources/: GraphicsPipelines.cpp  WindowDefs.cpp
Source/X-PlaneSceneryLibrary/: CMakeLists.txt  DebugMain.cpp  TextUtils.cpp  TextUtils.h  X-PlaneSceneryLibrary.rc  X-PlaneSceneryLibraryParsers.h  X-PlaneSceneryLibraryUtils.h  XPAsset.h  XPLayerGroups.cpp  XPLayerGroups.h  XPLibraryPath.h  XPLibrarySystem.cpp  XPObj.cpp  XPObj.h  resource.h
Source/_archive/SceneryEditorX/: CMakeLists.txt
Source/edX/: CMakeLists.txt  Format Testing.vcxproj.filters  edXConfig.h  edXLibraryFile.h  edXLibraryWriter.cpp  edXProjectFile.h  edXWriter.cpp  resource.h
Source/edX/testing/: CMakeLists.txt  FileBrowser.cpp  FileBrowser.hpp  FormatTester.rc  UI_Lists.h  main.cpp
source/CrashHandler/: CMakeLists.txt  CrashHandler.rc  breakpad.cpp  crash_handler.cpp  crash_handler.h  dialog.cpp  dialog.h  native_crash_handler.cpp  resource.h  service.cpp  service_ipc.cpp  service_ipc.h
source/Editor/: CMakeLists.txt  entrypoint.cpp  resource.h  xpeditor_pch.h
source/Editor/core/: editor.cpp  editor.h  editor_camera.cpp  editor_camera.h  main.cpp  project.cpp  project.h  scenery_gateway.cpp  scenery_gateway.h  selection_manager.cpp  selection_manager.h  viewport.cpp  viewport.h
source/Editor/modules/: 3d_modeling.cpp  3d_modeling.h  spline_module.cpp  spline_module.h
source/Editor/settings/: editor_settings.cpp  editor_settings.h
source/Editor/ui/: colors.h  styles.cpp  ui.cpp  ui.h  ui_context.cpp  ui_context.h  ui_globals.cpp  ui_manager.h
source/GraphicsEngine/: CMakeLists.txt  vkGfx_pch.h
source/GraphicsEngine/buffers/: buffer_data.h  index_buffer.cpp  index_buffer.h  uniform_buffer.cpp  uniform_buffer.h  vertex_buffer.cpp  vertex_buffer.h
source/GraphicsEngine/renderer/: primitives.cpp  primitives.h  stb_image_impl.cpp  xp_pbr.cpp  xp_pbr.h  xp_texture.cpp  xp_texture.h
source/GraphicsEngine/scene/: animation.cpp  animation.h  asset.cpp  asset.h  asset_manager.cpp  asset_manager.h  camera.h  lights.h  material.cpp  material.h  material_manager.cpp  material_manager.h  (+9 more)
source/Launcher/: CMakeLists.txt  Launcher.rc  resource.h  startup_pch.h
source/Math/: CMakeLists.txt  math_config.h  xMath.rc
source/SceneryEditorX/: CMakeLists.txt  EntryPoint.h  SceneryEditorX.aps  SceneryEditorX.h  SceneryEditorX.rc  app_pch.h  cpp.hint  resource.h  xpeditor_pch.h
source/Tests/: CMakeLists.txt  ENHANCED_LOGGING_SUMMARY.md  README.md  test_integration.cpp
source/X-PlaneSceneryLibrary/: CMakeLists.txt  TextUtils.cpp  TextUtils.h  X-PlaneSceneryLibrary.aps  XPLibraryPath.h  XPLibrarySystem.cpp  XPLibrarySystem.h  XPObj.cpp  XPObj.h
source/edX/: CMakeLists.txt  edX.aps  edX.rc  edXConfig.h  edXExample.cpp  edXLibraryFile.cpp  edXLibraryFile.h  edXLibraryReader.cpp  edXLibraryWriter.cpp  edXManager.cpp  edXManager.h  edXProjectFile.cpp  edXProjectFile.h  edXTimeUtils.cpp  edXTimeUtils.h  edXWriter.cpp
(+1229 files in other folders)
